<resources>
    <string name="app_name">Курс Валют</string>
    <string name="converter_activity">Converter Display</string>
    <string name="app_text">Курс Валют</string>
    <string name="currency_text">Курсы Валют ЦБ</string>
    <string name="sales_icon">Sales</string>
    <string name="contacts_text">Contacts</string>
    <string name="about_text">About</string>
    <string name="main_scene_text">Main</string>
    <string name="filter_text">Main</string>
    <string name="info_text">Loading Currency List...</string>
    <string name="update">Обновить</string>
    <string name="remove">Удалить</string>
    <string name="back_button">Назад</string>
    <string name="converter_button">Конвертер валют</string>
    <string name="insert">Вставить</string>
    <string name="dateOfUpdate">Время обновления</string>
    <string name="converter_title">Конвертирование суммы</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="calculate_button">Конвертировать</string>
    <string name="currency_name">Название валюты</string>
    <string name="result">Результат</string>
    <string name="sum_roubles">Введите сумму в рублях</string>
    <string name="in_roubles">в рублях</string>
    <string name="currency_rate">Currency rate</string>


</resources>