<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBGcolor"

    tools:context=".MainActivity">


<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/constraintLayout"-->
<!--        android:layout_width="65dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/asideBGolor"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="1.0">-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


<!--    <ImageView-->
<!--        android:id="@+id/imageView2"-->
<!--        android:layout_width="56dp"-->
<!--        android:layout_height="32dp"-->
<!--        android:layout_marginTop="12dp"-->
<!--        android:layout_marginEnd="12dp"-->
<!--        android:contentDescription="@string/filter_text"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/valuteRecycler"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/textView2"-->
<!--        app:layout_constraintHorizontal_bias="0.657"-->
<!--        app:layout_constraintStart_toEndOf="@+id/constraintLayout"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.814"-->
<!--        app:srcCompat="@drawable/ic_filter"-->
<!--        tools:ignore="ImageContrastCheck" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/currency_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/valuteRecycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="70dp"
        android:background="@color/cardview_light_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="274dp"
        android:layout_height="48dp"
        android:text="@string/info_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/progressbar"
        app:layout_constraintEnd_toEndOf="@+id/valuteRecycler"
        app:layout_constraintHorizontal_bias="0.589"
        app:layout_constraintStart_toStartOf="@+id/valuteRecycler"
        app:layout_constraintTop_toTopOf="@+id/valuteRecycler"
        app:layout_constraintVertical_bias="0.82" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/valuteRecycler"
        app:layout_constraintEnd_toEndOf="@+id/valuteRecycler"
        app:layout_constraintStart_toStartOf="@+id/valuteRecycler"
        app:layout_constraintTop_toTopOf="@+id/valuteRecycler" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valuteRecycler" />

    <TextView
        android:id="@+id/dateOfUpdate"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/valuteRecycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/sales_icon"
        app:layout_constraintBottom_toTopOf="@+id/valuteRecycler"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_hot_eal" />

</androidx.constraintlayout.widget.ConstraintLayout>